// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 2`] = `
<Button
  baseline={false}
  bgStyle="outline"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 3`] = `
<Button
  baseline={false}
  bgStyle="outline"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 4`] = `
<Button
  baseline={false}
  bgStyle="transparent"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 5`] = `
<Button
  baseline={false}
  bgStyle="transparent"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing bgStyle 6`] = `
<Button
  baseline={false}
  bgStyle="outline"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkGrammar 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkGrammar={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkGrammar 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkGrammar={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkGrammar 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkGrammar={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkGrammar 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkGrammar={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkHighlight 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkHighlight={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkHighlight 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkHighlight={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkHighlight 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkHighlight={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkHighlight 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkHighlight={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkSpaces 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkSpaces={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkSpaces 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkSpaces={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkSpaces 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkSpaces={false}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing checkSpaces 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  checkSpaces={true}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing className 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch my-classname"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing content 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
>
  12345
</Button>
`;

exports[`UU5.Bricks.ButtonSwitch props testing content 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonSwitch props testing content 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonSwitch props testing content 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
>
  12345
</Button>
`;

exports[`UU5.Bricks.ButtonSwitch props testing controlled 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing controlled 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing controlled 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing controlled 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing default props 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing disabled 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing disabled 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing disabled 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing disabled 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing dynamic 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={true}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing dynamic 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing dynamic 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing dynamic 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={true}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing hidden 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={true}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing hidden 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing hidden 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing hidden 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={true}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing id 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="myId-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing ignoreHTML 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing ignoreHTML 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing ignoreHTML 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing ignoreHTML 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing mainAttrs 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing name 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 5`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 6`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 7`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 8`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 9`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 10`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 11`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 12`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 13`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 14`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 15`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 16`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 17`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 18`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 19`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing nestingLevel 20`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing noIndex 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing noIndex 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing noIndex 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing noIndex 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing offProps 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema="danger"
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing onClick to buttonSwitch 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content="turned off"
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="switchID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={[Function]}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing onClick to buttonSwitch 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema="default"
  content="turned on"
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="switchID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={[Function]}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing onProps 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing props 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing pureRender 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={true}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing pureRender 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing pureRender 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing pureRender 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={true}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing selected 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={true}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing selected 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing selected 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing selected 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={true}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 5`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 6`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="xl"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 7`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="xl"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing size 8`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="l"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing style 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing style 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing style 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing style 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing switchedOn 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing switchedOn 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing switchedOn 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing switchedOn 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing textCorrector 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing textCorrector 2`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing textCorrector 3`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing textCorrector 4`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ButtonSwitch props testing tooltip 1`] = `
<Button
  baseline={false}
  bgStyle="filled"
  borderRadius={null}
  className="uu5-bricks-button-switch"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  displayBlock={false}
  dynamic={false}
  elevation={null}
  elevationHover={null}
  hidden={false}
  href={null}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={0}
  onClick={null}
  pressed={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  target="_self"
  tooltip="My Tooltip"
/>
`;
